// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c7 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c8 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 40px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c4 {
  box-sizing: border-box;
  margin-top: 24px;
  width: 100%;
  display: flex;
  justify-content: center;
}

.c5 {
  box-sizing: border-box;
  max-width: 700px;
  padding: 40px;
  background-color: #222C59;
  display: flex;
  align-items: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Trusted Devices
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="100%"
      >
        <div
          class="c5 sc-AxirZ c6"
        >
          <div
            class="c7"
            style="text-align: center;"
          >
            <svg
              fill="#2C3A73"
              height="150"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="150"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M179.2 716.8h665.6c42.342 0 76.8-34.458 76.8-76.8v-409.6c0-42.342-34.458-76.8-76.8-76.8h-665.6c-42.342 0-76.8 34.458-76.8 76.8v409.6c0 42.342 34.458 76.8 76.8 76.8zM153.6 230.4c0-14.131 11.469-25.6 25.6-25.6h665.6c14.131 0 25.6 11.469 25.6 25.6v409.6c0 14.131-11.469 25.6-25.6 25.6h-665.6c-14.131 0-25.6-11.469-25.6-25.6v-409.6z"
              />
              <path
                d="M998.4 768h-972.8c-14.131 0-25.6 11.469-25.6 25.6v51.2c0 42.342 34.458 76.8 76.8 76.8h870.4c42.342 0 76.8-34.458 76.8-76.8v-51.2c0-14.131-11.469-25.6-25.6-25.6zM947.2 870.4h-870.4c-14.131 0-25.6-11.469-25.6-25.6v-25.6h921.6v25.6c0 14.131-11.469 25.6-25.6 25.6z"
              />
            </svg>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              Register Trusted Device
            </div>
            <div
              class="c10"
            >
              Device Trust allows Teleport admins to enforce the use of trusted devices. Resources protected by the device mode "required" will enforce the use of a trusted device, in addition to establishing the user's identity and enforcing the necessary roles.
            </div>
            <div
              class="c11"
            >
              Furthermore, users using a trusted device leave audit trails that include the device's information. Please
               
              <a
                class="c12"
                color="light"
                href="https://goteleport.com/docs/access-controls/guides/device-trust/"
                rel="noreferrer"
                target="_blank"
              >
                view our documentation
              </a>
               
              on how to get started with Device Trust.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c3 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    some error message
  </div>
</div>
`;

exports[`loaded 1`] = `
.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 40px;
  width: 100%;
}

.c18 {
  box-sizing: border-box;
  margin-left: auto;
  width: 240px;
  color: rgba(255,255,255,0.87);
}

.c15 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c17 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 16px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c22 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
  display: flex;
  align-items: start;
}

.c9 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c10 {
  box-sizing: border-box;
  margin-right: 8px;
  display: flex;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: flex;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c16 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
}

.c16 > thead > tr > th,
.c16 > tbody > tr > th,
.c16 > tfoot > tr > th,
.c16 > thead > tr > td,
.c16 > tbody > tr > td,
.c16 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c16 > thead > tr > th:first-child,
.c16 > tbody > tr > th:first-child,
.c16 > tfoot > tr > th:first-child,
.c16 > thead > tr > td:first-child,
.c16 > tbody > tr > td:first-child,
.c16 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c16 > thead > tr > th:last-child,
.c16 > tbody > tr > th:last-child,
.c16 > tfoot > tr > th:last-child,
.c16 > thead > tr > td:last-child,
.c16 > tbody > tr > td:last-child,
.c16 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c16 > tbody > tr > td {
  vertical-align: middle;
}

.c16 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c16 > thead > tr > th .c14 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c16 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c16 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c16 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c13 {
  background: none;
  border: none;
  cursor: pointer;
}

.c13 .c14 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c13:hover .c14,
.c13:focus .c14 {
  opacity: 1;
}

.c13:disabled {
  cursor: default;
}

.c13:disabled .c14 {
  opacity: 0.1;
}

.c8 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c6 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c7 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-right: 184px;
}

.c7:hover,
.c7:focus,
.c7:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c7::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Trusted Devices
    </div>
  </div>
  <div
    class="c3"
  >
    <div
      class="c4"
      width="100%"
    >
      <nav
        class="c5"
      >
        <div
          class="c6"
        >
          <input
            class="c7"
            placeholder="SEARCH..."
            value=""
          />
          <div
            class="c8"
          />
        </div>
        <div
          class="c9"
          width="100%"
        >
          <div
            class="c10"
          >
            <div
              class="c11"
              color="text.contrast"
              style="white-space: nowrap; text-transform: uppercase;"
            >
              Showing 
              <strong>
                1
              </strong>
               - 
              <strong>
                3
              </strong>
               of
               
              <strong>
                3
              </strong>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              disabled=""
              title="Previous page"
            >
              <span
                class="c14 c15 icon icon-arrow-left-circle "
                color="light"
                font-size="3"
              />
            </button>
            <button
              class="c13"
              disabled=""
              title="Next page"
            >
              <span
                class="c14 c15 icon icon-arrow-right-circle "
                color="light"
                font-size="3"
              />
            </button>
          </div>
        </div>
      </nav>
      <table
        class="c16"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              OS Type
            </th>
            <th
              style="cursor: default;"
            >
              Asset Tag
            </th>
            <th
              style="cursor: default;"
            >
              Enroll Status
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              align="left"
            >
              <span
                class="c14 c17 icon icon-apple "
                color="light"
                style="padding-right: 5px;"
              />
               
              macOS
            </td>
            <td>
              CSXXXXXXXXX
            </td>
            <td>
              enrolled
            </td>
          </tr>
          <tr>
            <td
              align="left"
            >
              <span
                class="c14 c17 icon icon-linux "
                color="light"
                style="padding-right: 5px;"
              />
               
              Linux
            </td>
            <td>
              DSXXXXXXXXX
            </td>
            <td>
              not enrolled
            </td>
          </tr>
          <tr>
            <td
              align="left"
            >
              <span
                class="c14 c17 icon icon-windows "
                color="light"
                style="padding-right: 5px;"
              />
               
              Windows
            </td>
            <td>
              ESXXXXXXXXX
            </td>
            <td>
              enrolled
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="c18"
      color="text.primary"
      style="flex-shrink: 0;"
      width="240px"
    >
      <div
        class="c19"
      >
        Register Trusted Device
      </div>
      <div
        class="c20"
      >
        Device Trust allows Teleport admins to enforce the use of trusted devices. Resources protected by the device mode "required" will enforce authenticated device access.
      </div>
      <div
        class="c21"
      >
        Please
         
        <a
          class="c22"
          color="light"
          href="https://goteleport.com/docs/access-controls/guides/device-trust/"
          rel="noreferrer"
          target="_blank"
        >
          view our documentation
        </a>
         
        on how to get started with Device Trust.
      </div>
    </div>
  </div>
</div>
`;
